# devops-blacklist

./: .coverage  .coveragerc  .ebignore  .gitignore  02_packages.config  Procfile  README.md  app.py  application.py  check_db.py  config.py  deploy-strategies.py  extensions.py  gen_token.py  generate_token.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup_db.sql  test_api.py
.ebextensions/: 01_.config  01_rds.config  01_secrets.config  02_env.config  02_poetry.config  02_rds.config  03_env.config  03_nginx.config  03_poetry.config  04_autoscaling.config  04_settings.config  05_autoscaling.config  05_logging.config  06_iam_permissions.config  autoscaling.config  deployment-all-at-once.config  deployment-immutable.config  deployment-rolling-batch.config  deployment-rolling.config  health.config  healthcheck.config  options.config  rds-config.config
.elasticbeanstalk/: config.yml
.elasticbeanstalk/saved_configs/: blacklist-config-v1.cfg.yml  blacklist-env-sc.cfg.yml  rds-config.cfg.yml
despliegue/: all-at-once.config  immutable.config  traffic-splitting.config
docs/: API_DOCUMENTATION.md  Blacklist API.postman_collection.json  Blacklist_API.postman_collection.json  Blacklist_API.postman_collection_v1.json  DEPLOYMENT_VALIDATION.md  POSTMAN_SETUP.md  POSTMAN_TESTS.md  PUBLISH_DOCS.md
instance/: blacklist.db
models/: blacklist.py  models.py
resources/: blacklist_resource.py  get_blacklist_resource.py
tests/: 02_rds.config  debug_imports.py  test_complete.py  test_endpoints.py  test_simple.py
