[project]
name = "devops_entrega_1"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Sebastian Rodriguez Moreno",email = "js.rodriguezm12345@uniandes.edu.co"}
]
#readme = "README.md"
[tool.poetry]
requires-python = ">=3.13,<4"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-marshmallow (>=1.3.0,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "marshmallow-sqlalchemy (>=1.4.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
